# ros2-delivery-robot

./: .gitignore  GITHUB_SETUP.md  GPS_BASED_ZERO_POINT_SYSTEM.md  GPS_PIN_SYSTEM_FIX_REPORT.md  JETSON_GUIDE.md  LICENSE  PROJECT_SUMMARY.md  README.md  SYSTEM_INSPECTION_REPORT.md  authentication_node.py  build_and_run.sh  build_and_run_jetson.sh  build_and_run_macos.sh  check_project_status.sh  debug_nodes_jetson.sh  ekf.yaml  fix_launch_files_jetson.sh  full_system_launch.py  install_python_deps.sh  integrate_control_system.sh  mission_control_node.py  nav2_params.yaml  perception_setup.py  quick_fix_launch.sh  ros2-delivery-robot-structure.md  test_system_jetson.sh  yolo_inference_node.py  zero_point_default.json
config/: ekf_global.yaml  ekf_local.yaml  gps_calibration_params.yaml  navsat_transform.yaml
docs/: GETTING_STARTED_JETSON.md  GPS_AUTONOMOUS_GUIDE.md  JETSON_GUIDE.md
gui/: README.md  getting_started_gui.py
launch/: gps_autonomous_system.launch.py  gps_calibration_launch.py
models/: README.md
ros_map/: (B040)항공사진메타데이터_202303213C04320029.xml  (B090)온맵_2023_36710064_적색.xml  (B090)온맵_2023_36710074_적색.xml  map_merger.py  map_ros.py  optimized_map.yaml  png_to_ros_map.py
scripts/: build_and_run_jetson.sh  install_python_deps.sh  quick_start_gps_system.sh  test_system.sh
src/: CMakeLists.txt
src/delivery_robot_control/: package.xml  setup.cfg  setup.py
src/delivery_robot_control/config/: ros2_control.yaml
src/delivery_robot_control/launch/: control.launch.py
src/delivery_robot_control/resource/: delivery_robot_control
src/delivery_robot_description/: CMakeLists.txt  package.xml
src/delivery_robot_description/config/: README.md
src/delivery_robot_description/launch/: robot_description.launch.py
src/delivery_robot_description/meshes/: README.md
src/delivery_robot_description/urdf/: delivery_robot.urdf.xacro  materials.xacro
src/delivery_robot_mission/: package.xml  setup.cfg  setup.py
src/delivery_robot_mission/config/: mission_params.yaml
src/delivery_robot_mission/delivery_robot_mission/: system_monitor_node.py
src/delivery_robot_mission/launch/: full_system_launch.py  mission.launch.py
src/delivery_robot_mission/resource/: delivery_robot_mission
src/delivery_robot_navigation/: CMakeLists.txt  package.xml
src/delivery_robot_navigation/launch/: localization.launch.py  navigation.launch.py
src/delivery_robot_navigation/maps/: warehouse.yaml
src/delivery_robot_navigation/params/: README.md
src/delivery_robot_navigation/rviz/: README.md
src/delivery_robot_perception/: package.xml  setup.cfg  setup.py
src/delivery_robot_perception/config/: yolo_config.yaml
src/delivery_robot_perception/delivery_robot_perception/: camera_driver_node.py  status_publisher_node.py  web_bridge_node.py  yolo_inference_node.py
src/delivery_robot_perception/launch/: perception.launch.py
src/delivery_robot_perception/resource/: delivery_robot_perception
src/delivery_robot_security/: package.xml  setup.cfg  setup.py
src/delivery_robot_security/config/: qr_params.yaml
src/delivery_robot_security/launch/: security.launch.py
src/delivery_robot_security/resource/: delivery_robot_security
