<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>delivery_robot_description</name>
  <version>1.0.0</version>
  <description>배달 로봇의 URDF 모델 및 물리적 설명</description>
  
  <maintainer email="robotics.team@university.ac.kr">배달로봇팀</maintainer>
  <license>MIT</license>
  
  <url type="website">https://github.com/delivery-robot/delivery_robot_description</url>
  <url type="bugtracker">https://github.com/delivery-robot/delivery_robot_description/issues</url>
  <url type="repository">https://github.com/delivery-robot/delivery_robot_description</url>
  
  <author>배달로봇팀</author>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <!-- ROS 2 Dependencies -->
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>urdf</depend>
  <depend>xacro</depend>
  
  <!-- Gazebo Dependencies (시뮬레이션용) -->
  <depend>gazebo_ros</depend>
  <depend>gazebo_plugins</depend>
  
  <!-- Launch Dependencies -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  
  <!-- Test Dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>