<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>delivery_robot_mission</name>
  <version>1.0.0</version>
  <description>배달 로봇용 임무 관리 시스템 - 외부 API 연동, 경로 생성, 임무 상태 관리</description>
  
  <maintainer email="robotics.team@university.ac.kr">배달로봇팀</maintainer>
  <license>MIT</license>
  
  <url type="website">https://github.com/delivery-robot/delivery_robot_mission</url>
  <url type="bugtracker">https://github.com/delivery-robot/delivery_robot_mission/issues</url>
  <url type="repository">https://github.com/delivery-robot/delivery_robot_mission</url>
  
  <author>배달로봇팀</author>
  
  <buildtool_depend>ament_python</buildtool_depend>
  
  <!-- Python Dependencies -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>action_msgs</depend>
  
  <!-- Nav2 Dependencies -->
  <depend>nav2_msgs</depend>
  
  <!-- TF Dependencies -->
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  
  <!-- Launch Dependencies -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  
  <!-- Test Dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>