<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>delivery_robot_navigation</name>
  <version>1.0.0</version>
  <description>배달 로봇용 내비게이션 패키지 - Nav2 스택, EKF 센서 융합, 경로 계획</description>
  
  <maintainer email="robotics.team@university.ac.kr">배달로봇팀</maintainer>
  <license>MIT</license>
  
  <url type="website">https://github.com/delivery-robot/delivery_robot_navigation</url>
  <url type="bugtracker">https://github.com/delivery-robot/delivery_robot_navigation/issues</url>
  <url type="repository">https://github.com/delivery-robot/delivery_robot_navigation</url>
  
  <author>배달로봇팀</author>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <!-- Nav2 Dependencies -->
  <depend>nav2_bringup</depend>
  <depend>nav2_common</depend>
  <depend>nav2_core</depend>
  <depend>nav2_costmap_2d</depend>
  <depend>nav2_msgs</depend>
  <depend>nav2_util</depend>
  <depend>nav2_map_server</depend>
  <depend>nav2_amcl</depend>
  <depend>nav2_controller</depend>
  <depend>nav2_planner</depend>
  <depend>nav2_behaviors</depend>
  <depend>nav2_bt_navigator</depend>
  <depend>nav2_lifecycle_manager</depend>
  <depend>nav2_waypoint_follower</depend>
  <depend>nav2_velocity_smoother</depend>
  <depend>nav2_smoother</depend>
  
  <!-- Localization Dependencies -->
  <depend>robot_localization</depend>
  
  <!-- SLAM Dependencies (선택사항) -->
  <depend>slam_toolbox</depend>
  
  <!-- TF and Geometry -->
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  
  <!-- Launch Dependencies -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  
  <!-- Test Dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>