<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>delivery_robot_perception</name>
  <version>1.0.0</version>
  <description>배달 로봇용 인식 시스템 - YOLOv8 객체 탐지, 카메라 드라이버, 커스텀 코스트맵 플러그인</description>
  
  <maintainer email="robotics.team@university.ac.kr">배달로봇팀</maintainer>
  <license>MIT</license>
  
  <url type="website">https://github.com/delivery-robot/delivery_robot_perception</url>
  <url type="bugtracker">https://github.com/delivery-robot/delivery_robot_perception/issues</url>
  <url type="repository">https://github.com/delivery-robot/delivery_robot_perception</url>
  
  <author>배달로봇팀</author>
  
  <buildtool_depend>ament_python</buildtool_depend>
  
  <!-- Python Dependencies -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>vision_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  
  <!-- Nav2 Costmap Dependencies -->
  <depend>nav2_costmap_2d</depend>
  <depend>pluginlib</depend>
  
  <!-- OpenCV Dependencies -->
  <depend>opencv2</depend>
  
  <!-- Launch Dependencies -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  
  <!-- Test Dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  
  <export>
    <build_type>ament_python</build_type>
    <nav2_costmap_2d plugin="${prefix}/plugins.xml"/>
  </export>
</package>